<?xml version="1.0" encoding="utf-8"?>
<menu 	xmlns:android="http://schemas.android.com/apk/res/android" 
    	xmlns:gijon="http://schemas.android.com/apk/res-auto">
    	
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          gijon:showAsAction="ifRoom|collapseActionView"
          gijon:actionViewClass="android.support.v7.widget.SearchView" />
    
    <item android:id="@+id/action_share"
          android:icon="@drawable/ic_action_share"
          android:title="@string/action_share"
          gijon:showAsAction="ifRoom" 
          gijon:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    
    <item android:id="@+id/action_call"
          android:icon="@drawable/ic_action_call"
          android:title="@string/action_call" />
    
    <item android:id="@+id/action_web_site"
          android:icon="@drawable/ic_action_web_site"
          android:title="@string/action_web_site" />
    
    <item android:id="@+id/action_new_email"
          android:icon="@drawable/ic_action_new_email"
          android:title="@string/action_new_email" />
    
    <item android:id="@+id/action_favorite"
          android:icon="@drawable/ic_action_favorite"
          android:title="@string/action_favorite" />
    
    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh" 
          gijon:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_about"
          android:icon="@drawable/ic_action_about"
          android:title="@string/action_about" 
          gijon:showAsAction="ifRoom"/>
    
</menu>
